[metadata]
name = gmpy_ctypes
version = attr: setuptools_scm.get_version
description = GMP ctypes wrapper
keywords = PyPy, GMP
license = LGPL-3.0+
author = Sergey B Kirpichev
author_email = skirpichev@gmail.com
classifiers = Development Status :: 2 - Pre-Alpha
              Intended Audience :: Developers
              Intended Audience :: Science/Research
              License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
              Natural Language :: English
              Operating System :: OS Independent
              Programming Language :: Python :: 3
              Programming Language :: Python :: Implementation :: CPython
              Programming Language :: Python :: Implementation :: PyPy
              Topic :: Software Development :: Libraries :: Python Modules
              Topic :: Scientific/Engineering :: Mathematics
[options]
zip_safe = True
packages = find:
python_requires = >=3.5
setup_requires = setuptools>=36.7.0
                 setuptools_scm
                 pip>=9.0.1
                 pytest-runner
                 isort
tests_require = gmpy_ctypes[develop]
[options.extras_require]
tests = pytest>=3.10.1
        hypothesis
develop = %(tests)s
          flake8>=2.5.5,!=3.1.0
          flake8-docstrings>=1.2.0
          pep8-naming
          flake8-comprehensions
          flake8-isort
          pytest-xdist>=1.22.4
          pytest-cov
          astroid<=2.0.4
          pylint<=2.1.1
          coverage
          pytest-runner
          isort
          codecov
[aliases]
test = pytest
[flake8]
ignore = D102,D103,D105,N801
max-line-length = 7000
exclude = build,.eggs,.git,*.rst,*.cfg,*.yml
jobs = 1
per-file-ignores = */__init__.py:F401
[tool:pytest]
minversion = 2.7.0
doctest_optionflags = ELLIPSIS NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL
addopts = --durations=20
          -r X
          --doctest-glob='*.rst'
norecursedirs = build .eggs .git
xfail_strict = true
filterwarnings = ignore::UserWarning
                 error::DeprecationWarning
[coverage:run]
branch = True
omit = tests/*
[coverage:html]
directory = build/coverage/html
[coverage:report]
exclude_lines = pragma: no cover
                raise NotImplementedError
                return NotImplemented
[isort]
lines_after_imports = 2
atomic = True
